hdone/objects/Schedule_Run_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectAction__c</fullName>
        <description>Name of action performed on object</description>
        <inlineHelpText>Name of action performed on object</inlineHelpText>
        <label>ObjectAction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Name of object</description>
        <inlineHelpText>Name of object</inlineHelpText>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipLabel>Schedule Run Logs</relationshipLabel>
        <relationshipName>Schedule_Run_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Scheduled Job Start Time Window</description>
        <inlineHelpText>Scheduled Job Start Time Window (All unfinished Jobs between the Start Time and End Time Window were picked up)</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TxnElements__c</fullName>
        <description>Number of executed elements when exited process</description>
        <inlineHelpText>Number of executed elements when exited process</inlineHelpText>
        <label>TxnElements</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TxnSoql__c</fullName>
        <description>Soql transactions when exited process</description>
        <inlineHelpText>Soql transactions when exited process</inlineHelpText>
        <label>TxnSoql</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Schedule Run Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Schedule Log - {0}</displayFormat>
        <label>Schedule Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>